--- a/mashup.html
+++ b/mashup.html
@@ -1,32 +1,46 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<title>Logic Peripheral Australia (LPA)</title>
- <link href="style_mashup.css" rel="stylesheet" type="text/css">
+    <title>Logic Peripheral Australia (LPA)</title>
+    <link href="style_mashup.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
 </head>
-<body >
-<div class="grid-container">
-<div class="item1">Welcome to Logic Peripheral Australia (LPA)</div>
- <div class="background"></div>
-<div class="item2">
- <br>
- <br>
- <br>
- <br>
-<h1>Mission</h1>
-<p>
- <br>
- <br>
-Logical Peripherals Australia’s mission is to supply high quality computer peripherals,<br>
- reliable customer service and above all customer satisfaction. <br>
-We strive to deliver the very best in the latest technologies and support our customers with the highest after sales support, <br>allowing our customers to enjoy the best of technology that our ever-changing world demands.
-</p>
-</div>
-<div class="item3"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d454314.9102458256!2d152.6464012655568!3d-27.177198505689926!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b9159936cafed4d%3A0x1144875d303bc5e0!2sHarvey+Norman+Fortitude+Valley!5e0!3m2!1sen!2sau!4v1532952968481" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe></div>
-<div class="item4"><iframe width="760" height="515" src="https://www.youtube.com/embed/des3dpKtfIM" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></div>
-<div class="item5"><iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2FHarveyNormanAU%2Fposts%2F10155589628266024&width=500" width="500" height="487" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe></div>
-<div class="fb-like" data-href="https://www.facebook.com/HarveyNormanAU/" data-layout="standard" data-action="like" data-size="small" data-show-faces="false" data-share="true"></div>
-<div class="item6">Copyright &copy; &lt;&gt; <?php echo date("Y"); ?></div>
-</div>
+
+<body>
+    <div id="fb-root"></div>
+    <script async defer crossorigin="anonymous"
+        src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v5.0"></script>
+
+    <div class="grid-container">
+        <div class="item1">Welcome to Logic Peripheral Australia (LPA)</div>
+        <div class="background"></div>
+        <div class="item2">
+            <h1>Mission</h1>
+            <p>Logical Peripherals Australia’s mission is to supply high quality computer peripherals,</p>
+            <p>reliable customer service and above all customer satisfaction.</p>
+            <p>We strive to deliver the very best in the latest technologies and support our customers with the highest
+                after sales support, </p>
+            <p>allowing our customers to enjoy the best of technology that our ever-changing world demands.</p>
+        </div>
+        <div class="item3"><iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3542.173556004123!2d153.0680946156664!3d-27.40151442036809!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b91588e8dd5ad2d%3A0x6fad83765ab81616!2s1%2F66%20Amelia%20St%2C%20Nundah%20QLD%204012!5e0!3m2!1sen!2sau!4v1578965413749!5m2!1sen!2sau"
+                width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe></div>
+        <div class="item4"><iframe width="560" height="315" src="https://www.youtube.com/embed/0pThnRneDjw"
+                frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe></div>
+        <div class="item5">
+            <div class="fb-page" data-href="https://www.facebook.com/makeitcleanbne/" data-tabs="timeline" data-width=""
+                data-height="" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false"
+                data-show-facepile="true">
+                <blockquote cite="https://www.facebook.com/makeitcleanbne/" class="fb-xfbml-parse-ignore"><a
+                        href="https://www.facebook.com/makeitcleanbne/">Make It Clean</a></blockquote>
+            </div></iframe>
+        </div>
+        <div class="fb-like" data-href="https://www.facebook.com/ilmo.ott" data-layout="standard" data-action="like"
+            data-size="small" data-show-faces="false" data-share="true"></div>
+        <div class="item6">Copyright &copy; &lt;&gt; <?php echo date("Y"); ?></div>
+    </div>
 </body>
+
 </html>
